# PEACH

./: .codecov.yaml  .codespellrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  go_bp_genesets_all.rds  go_bp_genesets_symbols.rds  go_id_to_name_map.rds  go_terms_full.rds  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yaml  release.yaml  test.yaml
data/: hsc_deep_aa_7arch.pt
docs/: INDEX.md  conf.py  contributing.md  index.rst  installation.md
docs/_static/css/: custom.css
docs/api/: index.rst
docs/tutorials/: 01_data_loading.ipynb  02_hyperparameter_search.ipynb  03_model_training.ipynb  04_archetype_coordinates.ipynb  05_gene_enrichment.ipynb  06_cellrank_integration.ipynb  08_visualization.ipynb  09_scatac_analysis.ipynb  10_spatial_analysis.ipynb  index.md
docs/workflows/: WORKFLOW_01_DATA_LOAD.py  WORKFLOW_02_HYPERPARAM_SEARCH.py  WORKFLOW_03_MODEL_TRAINING.py  WORKFLOW_04_COORDINATES.py  WORKFLOW_05_ENRICHMENT.py  WORKFLOW_06_CELLRANK.py  WORKFLOW_08_VISUALIZATION.py  WORKFLOW_09_SCATAC.py  WORKFLOW_10_SPATIAL.py  crs_single_trajectory.py  pDC_split.py  treatment_phase_analysis.py
src/: __init__.py
src/peach/: __init__.py
src/peach/_core/: __init__.py  tools_schema.py  types.py  types_index.py
src/peach/_core/models/: Deep_AA.py  VAE_Base.py  __init__.py
src/peach/_core/utils/: PCHA.py  __init__.py  analysis.py  atacseq.py  cellrank_helpers.py  convex_synth_data.py  cv_training.py  dataloader_config.py  gene_analysis.py  generative_sampling.py  grid_search_results.py  hyperparameter_search.py  load_anndata.py  metrics.py  performance_optimization.py  statistical_tests.py  statistical_tests.py.backup  training.py
src/peach/_core/viz/: __init__.py  results_viz.py  training_viz.py  viz_convex.py
src/peach/datasets/: __init__.py
src/peach/pl/: __init__.py  archetypal.py  cellrank_viz.py  debug_dotplot.py  pattern_visualization.py  results.py  spatial.py
src/peach/pp/: __init__.py  basic.py
src/peach/tl/: __init__.py  archetypal.py  cellrank_integration.py  hyperparameters.py  spatial.py  statistical.py
tests/: conftest.py  test_data_structures.py  test_v01_comprehensive.py
tests/test_core/: __init__.py  test_archetypal_analysis.py  test_cv_results_plotting.py  test_hyperparameters.py  test_preprocessing.py
tests/test_integration/: __init__.py  test_cellrank.py  test_workflows.py
tests/test_statistical/: __init__.py  test_gene_associations.py  test_pathway_associations.py
tests/test_visualization/: __init__.py  test_comprehensive.py  test_plotting_advanced.py  test_plotting_basic.py
